--- a/css/response_1023.css
+++ b/css/response_1023.css
@@ -1,8 +1,7 @@
 @media print, (max-width: 1023px) {
  
     :root {
-        --font_size: 17px;
-        --font_size_title: 24px;
+        --font_size_title: 34px;
     }
 
     .news_top {
@@ -41,6 +40,63 @@
     }
     .footer_logo {
         margin: 0 auto 30px;
+    }
+    .first-section_title {
+        font-size: 42px;
+        line-height: 1.2;
+        margin-bottom: 16px;
+    }
+    .first-section_text {
+        font-size: 18px;
+        line-height: 25px;
+        margin-bottom: 45px;
+    }
+    .first-section {
+        padding: 80px 0 80px;
+    }
+    .quote_photo {
+        width: 307px;
+        height: 300px;
+        bottom: -80px;
+    }
+    .quote_info {
+        max-width: 408px;
+        margin-left: 0;
+    }
+    .quote_info-text {
+        font-size: 20px;
+        line-height: 27px;
+        margin-bottom: 25px;
+    }
+    .quote_info-name::before {
+        right: 12px;
+        top: 7px;
+        width: 116px;
+        height: 95px;
+        background-size: cover;
+    }
+    .quote_info-name {
+        font-size: 18px;
+        line-height: 22px;
+    }
+    .advantages_title {
+        margin-bottom: 40px;
+    }
+    .advantages_item_title {
+        font-size: 23px;
+        line-height: 28px;
+        margin-bottom: 10px;
+    }
+    .buttonUp button {
+        width: 50px;
+        height: 50px;
+        background-size: cover;
+    }
+    footer {
+        padding: 50px 0 20px;
+    }
+    .artists {
+        padding: 60px 0 60px;
     }
 
 
