--- a/css/response_1187.css
+++ b/css/response_1187.css
@@ -157,10 +157,13 @@
         height: 100%;
     }
     .news_left .news_item:nth-child(1) .news_item-info {
-        width: calc(100% - 260px);
+        width: calc(100% - 335px);
     }
     .news_right {
-        width: 350px;
+        width: 330px;
+    }
+    .news_left {
+        flex-wrap: wrap;
     }
     .news_right .news_item:nth-child(1) .news_item-img img {
         width: 100%;
@@ -176,11 +179,19 @@
         border-top-right-radius: 12px;
     }
     .news_left .news_item:nth-child(3) {
-        width: calc(50% - 12px);
+        width: calc(50% - 13px);
         max-width: 100%;
+        flex-direction: column;
+    }
+    .news_left .news_item:nth-child(2) .news_item-img {
+        height: 255px;
     }
     .news_left .news_item:nth-child(3) .news_item-img {
-        height: 170px;
+        height: 255px;
+    }
+    .news_right .news_item:nth-child(2) {
+        padding-top: 65px;
+        padding-bottom: 65px;
     }
     .news_left .news_item:nth-child(3) .news_item-img img {
         border-bottom-right-radius: 12px;
@@ -191,7 +202,7 @@
         width: 100%;
     }
     .news_left .news_item:nth-child(2) {
-        width: calc(50% - 12px);
+        width: calc(50% - 13px);
         max-width: 100%;
     }
 
