--- a/css/response_1350.css
+++ b/css/response_1350.css
@@ -67,7 +67,12 @@
         bottom: -80px;
     }
     .quote {
-        padding: 80px 0;
+        padding: 80px 0;        
+    }
+    .advantages,
+    .quote,
+    .callback {
+        margin-bottom: 100px;
     }
     .quote_info-name::before {
         right: -28px;
