--- a/css/response_479.css
+++ b/css/response_479.css
@@ -30,6 +30,7 @@
     }
     footer {
         padding: 30px 0 20px;
+        border-top: 1px solid rgba(198, 190, 179, 0.6);
     }
     .quote_info-text {
         font-size: 18px;
@@ -98,7 +99,30 @@
     .news_right .news_item:nth-child(2) {
         font-size: 24px;
     }
-    
+    .advantages, 
+    .quote, 
+    .news {
+        margin-bottom: 37px;
+    }
+    .callback {
+        margin-bottom: 0;
+    }
+    .callback_wrap {
+        padding: 40px 0 40px;
+    }
+    .releases_top, 
+    .news_head, 
+    .advantages_title {
+        margin-bottom: 18px;
+    }
+    .advantages_title {
+        margin-right: 0;
+    }
+    .advantages_item_title {
+        font-size: 18px;
+        line-height: 24px;
+        margin-bottom: 4px;
+    }
 
 
 
