--- a/css/response_767.css
+++ b/css/response_767.css
@@ -2,7 +2,7 @@
 
     :root {
         --font_size: 15px;
-        --font_size_title: 28px;
+        --font_size_title: 30px;
     }
  
     .advantages_items {
@@ -45,7 +45,7 @@
     }
     .quote_info-name::before {
         right: 0;
-        top: 22px;
+        top: -4px;
         width: 154px;
         height: 104px;
     }
@@ -136,6 +136,54 @@
     .news_right .news_item:nth-child(2) {
         width: calc(50% - 6px);
     }
+    .news_top .news_item:nth-child(1) {
+        padding-bottom: 50px;
+    }
+    .news_left .news_item:nth-child(2) .news_item-img,
+    .news_left .news_item:nth-child(3) .news_item-img {
+        height: 335px;
+    }
+
+    .releases_item-title,
+    .artists_item-title {
+        font-size: 18px;
+        margin-bottom: 5px;
+    }
+    .advantages, 
+    .quote, 
+    .callback, 
+    .news {
+        margin-bottom: 50px;
+    }
+    .releases_top, 
+    .news_head, 
+    .advantages_title {
+        margin-bottom: 25px;
+    }
+    .callback_title {
+        line-height: 38px;
+    }
+    .callback_title br {
+        display: none;
+    }
+    .callback_text {
+        font-size: 19px;
+        margin-bottom: 30px;
+    }
+    form .line .field label {
+        font-size: 18px;
+        line-height: 28px;
+        margin-bottom: 5px;
+    }
+    .quote_photo {
+        bottom: -30px;
+    }
+    .quote {
+        padding: 80px 0 30px;
+    }
+
+
+
     
 
    
