--- a/css/styles.css
+++ b/css/styles.css
@@ -368,10 +368,10 @@ header .cont {
     height: 36px;
     top: 0;
     transition: .3s;
+    position: relative;
 }
 .header_social a:hover {
-    top: -3px;
-    position: relative;
+    top: -3px;    
 }
 header .cont {
     position: relative;
@@ -415,7 +415,7 @@ header .close_btn {
     color: #000;    
     position: absolute;
     top: 24px;
-    left: 22px;
+    right: 28px;
     display: none;
     width: 20px;
     height: 20px;
@@ -557,8 +557,8 @@ header .logo-mob {
     display: flex;
 }
 .releases_item-img {
-    width: 100%;
-    height: auto;
+    width: 300px;
+    height: 300px;
     margin-bottom: 16px;   
 }
 .releases_item-img img {
@@ -1112,6 +1112,7 @@ footer {
     justify-content: space-between;
     margin-left: -50px;
     margin-bottom: 92px;
+    width: 100%;
 }
 .footer_items > * {
     width: calc(100%/4 - 50px);
@@ -1149,11 +1150,11 @@ footer {
 }
 .footer_social a {
     text-decoration: none;
-    transition: .3s;
+    transition: all .3s;
+    position: relative;
 }
 .footer_social a:hover {
-    top: -3px;
-    position: relative;
+    top: -3px;    
 }
 .footer_item-email {
     text-decoration: none;
@@ -1332,10 +1333,11 @@ footer .contact_callback-red {
     height: 40px;
     font-weight: 600;
 }
-.modal form .line .field label a {
+.modal form .line .field label .lost-password {
     font-weight: 600;
     font-size: 12px;
     line-height: 22px;
+    color: var(--bg2);
 }
 .modal form .line .field input {
     background: #F7F7F7;
