--- a/css/response_767.css
+++ b/css/response_767.css
@@ -72,14 +72,17 @@
     }
     .releases_top,
     .artists_top {
-        flex-direction: column;
         margin-bottom: 20px;
     }
-    .releases_left,
-    .artists_left {
-        justify-content: space-between;
-        width: 100%;
-        margin-bottom: 15px;
+    .releases_link,
+    .artists_link {
+        display: none;
+    }
+    .releases_link-mob,
+    .artists_link-mob {
+        display: inline-block;
+        margin-top: 30px;
+        margin-left: 0;
     }
     .artists .cont:before {
         height: 79px;
