--- a/css/styles.css
+++ b/css/styles.css
@@ -560,17 +560,24 @@ header .logo-mob {
 .slider-arrows {
     display: flex;
 }
-.releases_item-img {
-    /* width: 300px;
-    height: 300px; */
-    width: 100%;
-    height: auto;
-    margin-bottom: 16px;   
+.releases_item-img,
+.artistss_item-img {
+    position: relative;
+    overflow: hidden;
+    padding-bottom: 100%;
+    background: #ddd; 
+    margin-bottom: 16px;
+    border-radius: 12px;
 }
-.releases_item-img img {
-    border-radius: 16px;
+.releases_item-img img,
+.artistss_item-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 .releases_item-title {
     font-weight: 800;
@@ -857,9 +864,11 @@ header .logo-mob {
     border-top-right-radius: 12px;
     border-bottom-right-radius: 12px;
 }
+.news_item img {
+    transition: all .3s;
+}
 .news_item:hover img {
     transform: scale(1.1); 
-    transition: all 0.3s;     
 }
 .news_right {
     width: 416px;
@@ -1056,11 +1065,11 @@ form button {
     color: #FFFFFF; 
     margin-top: 6px;
     transition: all .3s;
+    border: 2px solid var(--bg2);
 }
 form button:hover {
     color: var(--bg2);
     background: #fff;
-    border: 1px solid var(--bg2);
 }
 .form-politic {
     font-weight: 400;
