--- a/css/styles.css
+++ b/css/styles.css
@@ -561,16 +561,15 @@ header .logo-mob {
     display: flex;
 }
 .releases_item-img,
-.artistss_item-img {
+.artists_item-img {
     position: relative;
     overflow: hidden;
     padding-bottom: 100%;
-    background: #ddd; 
     margin-bottom: 16px;
     border-radius: 12px;
 }
 .releases_item-img img,
-.artistss_item-img {
+.artists_item-img img {
     position: absolute;
     top: 0;
     left: 0;
@@ -664,13 +663,9 @@ header .logo-mob {
     background: url(../images/line.svg);
 }
 .artists_item-img {
-    width: 100%;
-    height: auto;
     margin-bottom: 24px;
 }
 .artists_item-img img {
-    width: 100%;
-    height: 100%;
     border-radius: 100px 100px 100px 24px; 
 } 
 .artists_item-title {
@@ -1123,6 +1118,8 @@ footer {
 }
 .footer_logo {
     margin-right: 117px;
+    width: 184px;
+    height: 170px;
 }
 .footer_items {
     display: flex;
@@ -1170,6 +1167,9 @@ footer {
     transition: all .3s;
     position: relative;
     top: 0;
+    width: 36px;
+    height: 36px;
+    display: inline-block;
 }
 .footer_social a:hover {
     top: -3px;    
