--- a/css/styles.css
+++ b/css/styles.css
@@ -1450,3 +1450,14 @@ footer .contact_callback-red {
     width: 14px;
     height: 14px;
 }
+
+
+
+
+.page header {
+    border: 1px solid #C8C8C6;
+    box-shadow: 0px 3px 2px #C8C8C6;     
+}
+.about {
+    margin-top: 136px;
+}
