--- a/css/styles.css
+++ b/css/styles.css
@@ -1453,11 +1453,98 @@ footer .contact_callback-red {
 
 
 
-
+/* about */
 .page header {
     border: 1px solid #C8C8C6;
     box-shadow: 0px 3px 2px #C8C8C6;     
 }
 .about {
     margin-top: 136px;
+}
+.breadcrumbs {
+    margin-bottom: 66px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+    color: #56595D;
+}
+.breadcrumbs a {
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+    color: #56595D;   
+}
+.about_title {
+    margin-bottom: 64px;
+}
+.about_description-title {
+    font-weight: 800;
+    font-size: 28px;
+    line-height: 32px;
+    text-transform: uppercase;
+    color: #2C3036;
+    margin-bottom: 16px;
+}
+.about_description-text p {
+    margin-bottom: 20px;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 24px;
+    color: #56595D;
+}
+p.mb0 {
+    margin-bottom: 0;
+}
+.about_description-text.mb64 {
+    margin-bottom: 64px;
+}
+.about_description-box {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 64px;
+}
+.about_description-box.second {
+    margin-bottom: 0;
+}
+.about_description-box .about_img {
+    margin-left: 48px;
+    width: 647px;
+    height: 443px;
+    flex-shrink: 0;
+}
+.about_img img {
+    border-radius: 12px;
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.about_description-box.second .about_img {
+    margin-left: 0;
+    margin-right: 48px;
+}
+.block {
+    margin-bottom: 64px;
+}
+.about_description-text p:last-child {
+    margin-bottom: 0;
+}
+
+
+/* about_quote */
+.about_quote {
+    padding: 80px 0px 90px;
+    background: #F2EEE9;
+}
+.about_quote-text {
+    font-weight: 800;
+    font-size: 20px;
+    line-height: 24px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #55002B;
+}
+.page .artists {
+    margin-bottom: 193px;
 }
