Сделал music.html

--- a/css/response_1187.css
+++ b/css/response_1187.css
@@ -273,6 +273,16 @@
         width: 445px;
         height: 305px;
     }
+
+    .music_items {
+        margin-left: -25px;
+        margin-bottom: -25px;
+    }
+    .music_items > * {
+        margin-left: 25px;
+        margin-bottom: 25px;
+        width: calc(100%/3 - 25px);
+    }
     
 
 
