--- a/css/response_479.css
+++ b/css/response_479.css
@@ -152,6 +152,20 @@
         margin-top: 40px;
     }
 
+    .music_items {
+        margin-left: 0px;
+        margin-bottom: -20px;
+    }
+    .music_items > * {
+        margin-left: 0px;
+        margin-bottom: 20px;
+        width: 100%;
+    }
+
+    .music_modal {
+        padding: 45px 20px 25px;
+    }
+
 
    
 }
