--- a/css/styles.css
+++ b/css/styles.css
@@ -1585,3 +1585,145 @@ p.mb0 {
     bottom: -150px;
     background: url(../images/line.svg);
 }
+
+
+.music {
+    margin-top: 66px;
+}
+.music_items {
+    display: flex;
+    justify-content: space-between;
+    margin-left: -48px;
+    margin-bottom: -48px;
+    flex-wrap: wrap;
+}
+.music_items > * {
+    margin-left: 48px;
+    margin-bottom: 48px;
+    width: calc(100%/4 - 48px);
+    text-decoration: none;
+}
+.music_item-title {
+    font-weight: 800;
+    font-size: 20px;
+    line-height: 24px;
+    text-transform: uppercase;
+    color: #2C3036;
+    margin-bottom: 8px;
+}
+.music_item-text {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 24px;
+    color: #56595D;
+}
+.music_item-img img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.music_item-img {
+    position: relative;
+    overflow: hidden;
+    padding-bottom: 100%;
+    margin-bottom: 16px;
+    border-radius: 16px;
+}
+
+.pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 64px;
+    margin-bottom: 120px;
+}
+.pagination a {
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 16px;
+    color: #56595D;
+    width: 46px;
+    height: 46px;
+    border: 1px solid #C6BEB3;
+    border-radius: 90px;
+    margin-left: 7px;
+    margin-right: 7px;
+    transition: all .4s;
+    flex-shrink: 0;
+}
+.pagination a.prev,
+.pagination a.next {
+    border: none;
+}
+.pagination a.prev {
+    margin-right: 91px;
+}
+.pagination a.next {
+    margin-left: 91px;
+}
+.pagination a.active {
+    background: #55002B;
+    color: #fff;
+    border: 1px solid #55002B;
+}
+.pagination a:hover {
+    background: #55002B;
+    color: #fff;
+    border: 1px solid #55002B;
+}
+.pagination span {
+    margin-left: 25px;
+    margin-right: 25px;
+}
+.pagination a.prev:hover,
+.pagination a.next:hover {
+    background: none;
+    color: inherit;
+    border: none;
+} 
+
+
+
+.music_modal {
+    max-width: 450px;
+    width: 100%;
+    background: #FFFFFF;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.07);
+    border-radius: 10px;
+    padding: 56px 40px 57px;
+    display: none;
+}
+.music_modal .music_item-img {
+    border-radius: 0;
+}
+.music_item-links {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+}
+.music_item-links a {
+    text-decoration: none;
+    background: #FCFCFB;
+    border: 1px solid #3D001B;
+    border-radius: 8px;
+    margin-bottom: 35px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.music_item-links a:last-child {
+    margin-bottom: 0;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 30px;
+    color: rgba(44, 48, 54, 0.8);
+}
