Сделал videos.html

--- a/css/response_1023.css
+++ b/css/response_1023.css
@@ -192,7 +192,8 @@
     .page .releases {
         margin-bottom: 115px;
     }
-    .music {
+    .music,
+    .videos {
         margin-top: 50px;
     }
 
