--- a/css/styles.css
+++ b/css/styles.css
@@ -1727,3 +1727,51 @@ p.mb0 {
     line-height: 30px;
     color: rgba(44, 48, 54, 0.8);
 }
+
+
+.videos {
+    margin-top: 66px;
+}
+.videos_items {
+    display: flex;
+    justify-content: space-between;
+    margin-left: -48px;
+    margin-bottom: -48px;
+    flex-wrap: wrap;
+}
+.videos_items > * {
+    margin-left: 48px;
+    margin-bottom: 48px;
+    width: calc(100%/3 - 48px);
+    text-decoration: none;
+}
+.videos_item-title {
+    font-weight: 800;
+    font-size: 20px;
+    line-height: 24px;
+    text-transform: uppercase;
+    color: #2C3036;
+    margin-bottom: 8px;
+}
+.videos_item-text {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 24px;
+    color: #56595D;
+}
+.videos_item-img img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.videos_item-img {
+    position: relative;
+    overflow: hidden;
+    padding-bottom: 69%;
+    margin-bottom: 16px;
+    border-radius: 16px;
+}
