--- a/css/styles.css
+++ b/css/styles.css
@@ -1460,9 +1460,6 @@ footer .contact_callback-red {
     border: 1px solid #C8C8C6;
     box-shadow: 0px 3px 2px #C8C8C6;     
 }
-.about {
-    margin-top: 66px;
-}
 .breadcrumbs {
     margin-top: 136px;
     font-weight: 500;
@@ -1587,9 +1584,7 @@ p.mb0 {
 }
 
 
-.music {
-    margin-top: 66px;
-}
+
 .music_items {
     display: flex;
     justify-content: space-between;
@@ -1729,7 +1724,10 @@ p.mb0 {
 }
 
 
-.videos {
+.about,
+.music,
+.videos,
+.artist {
     margin-top: 66px;
 }
 .videos_items {
@@ -1774,4 +1772,49 @@ p.mb0 {
     padding-bottom: 69%;
     margin-bottom: 16px;
     border-radius: 16px;
+}
+
+
+
+.artist_items {
+    display: flex;
+    margin-left: -48px;
+    margin-bottom: -48px;
+    flex-wrap: wrap;
+}
+.artist_items > * {
+    width: calc(100%/6 - 48px);
+    margin-left: 48px;
+    margin-bottom: 48px;
+}
+.artist_item-title {
+    font-weight: 800;
+    font-size: 20px;
+    line-height: 24px;
+    text-transform: uppercase;
+    color: var(--text_color);
+    margin-bottom: 8px;
+}
+.artist_item-text {
+    font-weight: 600;
+    font-size: var(--font_size);
+    line-height: 16px;
+    color: #56595D;
+}
+.artist_item-img {
+    position: relative;
+    overflow: hidden;
+    padding-bottom: 100%;
+    margin-bottom:24px;
+    border-radius: 12px;
+}
+.artist_item-img img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 100px 100px 100px 24px;
 }
