--- a/css/response_1187.css
+++ b/css/response_1187.css
@@ -304,6 +304,11 @@
         margin-left: 25px;
         margin-bottom: 25px;
     }
+
+
+    .card_title {
+        margin-bottom: 50px;
+    }
     
 
 
