--- a/css/styles.css
+++ b/css/styles.css
@@ -1934,3 +1934,104 @@ p.mb0 {
     line-height: 20px;
     color: #56595D;    
 }
+
+
+
+.service {
+}
+.cont {
+}
+.releases_top {
+}
+.service_title {
+}
+.title {
+}
+.service_items {
+    margin-left: -48px;
+    margin-bottom: -84px;
+    display: flex;
+    flex-wrap: wrap;
+    height: 100%;
+}
+.service_items > * {
+    width: calc(100%/4 - 48px);
+    margin-left: 48px;
+    margin-bottom: 84px;
+    padding: 40px;
+    background: #F2EEE9;
+    border-radius: 12px;    
+}
+.service_item {
+    position: relative;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+}
+.service_item-title {
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 32px;
+    color: #2C3036;
+    margin-bottom: 28px;
+}
+.service_item-text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    color: #56595D;
+    margin-bottom: 28px;
+}
+.service_item-btn {
+    text-decoration: none;
+    margin-top: auto;
+    display: inline-block;
+    background: #55002B;
+    border-radius: 100px;
+    padding: 12px 20px;
+    font-weight: 700;
+    font-size: 16px;
+    color: #FFFFFF;
+    text-align: start;
+}
+
+
+.map_wrap {
+    position: relative;
+    overflow: hidden;
+    max-width: 100%;
+    width: calc(100% - 420px);
+    height: 493px;
+    transform: translateZ(0);
+}
+#map {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+.contacts {
+}
+.cont {
+}
+.releases_top {
+}
+.releases_title {
+}
+.title {
+}
+.contacts_box {
+    display: flex;
+    justify-content: space-between;
+}
+.contacts_info {
+}
+.contacts_item {
+}
+.contacts_item-title {
+}
+.contacts_item-text {
+}
+.map_wrap {
+}
